Limitada creacion de rutinas semanales